{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 152,
  "lineage": "ace2ba14-434d-402e-35e6-0e44e9684b57",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-14T12:30:03.954-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-s-tmacdonald-sbx57-1992/global/firewalls/test",
            "log_config": [],
            "name": "test",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/global/networks/base",
            "priority": 1000,
            "project": "prj-s-tmacdonald-sbx57-1992",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/global/firewalls/test",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-14T12:32:38.651-07:00",
            "id": "projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/forwardingRules/nucleus-webserver",
            "ip_address": "34.130.154.160",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "nucleus-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/global/networks/base",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "prj-s-tmacdonald-sbx57-1992",
            "recreate_closed_psc": false,
            "region": "northamerica-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/forwardingRules/nucleus-webserver",
            "target": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/targetHttpProxies/nucleus-webserver"
          },
          "dependencies": [
            "google_compute_region_backend_service.webserver",
            "google_compute_region_target_http_proxy.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/zones/northamerica-northeast2-b/disks/test"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-s-tmacdonald-sbx57-1992/zones/northamerica-northeast2-b/instances/test",
            "instance_id": "4668388901326292307",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "NPD-PVLj4fw=",
            "name": "test",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/global/networks/base",
                "network_ip": "10.128.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/subnetworks/northamerica-northeast2",
                "subnetwork_project": "prj-s-tmacdonald-sbx57-1992"
              }
            ],
            "project": "prj-s-tmacdonald-sbx57-1992",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/zones/northamerica-northeast2-b/instances/test",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "northamerica-northeast2-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/zones/northamerica-northeast2-b/instanceGroups/nucleus-webserver",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-05-14T12:30:38.838-07:00",
            "enable_cdn": false,
            "fingerprint": "EIHOfYSz2Fw=",
            "generated_id": 8917521401560040753,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/healthChecks/nucleus-webserver"
            ],
            "id": "projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/backendServices/nucleus-webserver",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "nucleus-webserver",
            "port_name": "http",
            "project": "prj-s-tmacdonald-sbx57-1992",
            "protocol": "HTTP",
            "region": "northamerica-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/backendServices/nucleus-webserver",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_instance_group_manager.webserver",
            "google_compute_instance_template.webserver",
            "google_compute_region_health_check.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-14T12:30:59.933-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/backendServices/nucleus-webserver",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "a4fyKFCrw5w=",
            "host_rule": [],
            "id": "projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/urlMaps/nucleus-webserver",
            "map_id": 7921825481290024220,
            "name": "nucleus-webserver",
            "path_matcher": [],
            "project": "prj-s-tmacdonald-sbx57-1992",
            "region": "northamerica-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-s-tmacdonald-sbx57-1992/regions/northamerica-northeast2/urlMaps/nucleus-webserver",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance_group_manager.webserver",
            "google_compute_instance_template.webserver",
            "google_compute_region_backend_service.webserver",
            "google_compute_region_health_check.webserver"
          ]
        }
      ]
    }
  ]
}